# analytics-bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  db.py  llm.py  main.py  models.py  prompt.py  query_executor.py  sql_guard.py
migrations/: env.py
migrations/versions/: 7f41252fa94b_create_videos_and_snapshots.py
scripts/: entrypoint.sh  load_data.py  test_llm.py  test_query.py
tests/: test_llm_integration.py  test_prompt.py  test_sql_guard.py
