[project]
name = "analytics-bot"
version = "0.1.0"
description = "Async Telegram bot for video analytics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.4.1",
  "asyncpg>=0.29.0",
  "sqlalchemy>=2.0.25",
  "alembic>=1.13.1",
  "greenlet>=3.0.3",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.1",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "tenacity>=8.2.3",
  "structlog>=24.1.0",
  "uvloop>=0.19.0; sys_platform != 'win32'",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.2.2",
  "mypy>=1.8.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"